test/errors/type/str/trim1.yasl
mt.lookup('', .trim)(1, true)
